--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <figure class="foto-legenda">
                     <img src="img/grand.jpg" alt="Iori e Kohei">
                     <figcaption>
-                        <h3>Seu cu está sob perigo</h3>
-                        <p>Iori e Kohei te observam, preparados para dar o bote</p>
+                        <h3>Você está sob perigo</h3>
+                        <p>Iori e Kohei te observam</p>
                     </figcaption>
                 </figure>
 
@@ -70,14 +70,14 @@
                 <h2>Por quem é feito</h2>
                 TABELA COM NOMES
 
-                <h2>Tua mãe</h2>
+                <h2>Subtítulo</h2>
                 <p>liquam erat volutpat. Nunc nec suscipit turpis, ac rutrum nisl. Morbi tristique finibus libero, et
                     rutrum elit eleifend nec. Morbi eu eleifend quam. Sed erat enim, sodales ultricies sapien eu,
                     eleifend iaculis magna. Maecenas ut enim eu eros maximus laoreet at sollicitudin leo. Vestibulum
                     semper mauris id gravida pretium. Nulla vitae nunc eu orci tempus ullamcorper sodales id mauris.
                     Mauris leo magna, laoreet nec porttitor ac, suscipit id sapien.</p>
 
-                <h2>Teu pai</h2>
+                <h2>Subtítulo</h2>
                 <p> Suspendisse ut pulvinar ligula. Nam velit diam, placerat in condimentum ac, porta laoreet velit. Sed
                     ut augue tempor, suscipit arcu vel, aliquet leo. Maecenas pharetra leo turpis, a dapibus sapien
                     sodales id.</p>
